# cv-project

./: .gitignore  CMakeLists.txt  README
01_basic_operations/: CMakeLists.txt
01_basic_operations/src/: 01_basic_operations.cpp
02_median_blur/: CMakeLists.txt
02_median_blur/src/: 02_median_blur.cpp
03_linear_regression/: CMakeLists.txt
03_linear_regression/src/: 03_linear_regression.cpp
03_regression/: CMakeLists.txt
03_regression/src/: 03_regression.cpp
04_kmeans/: CMakeLists.txt
04_kmeans/src/: 04_kmeans.cpp  kmeans_iris.py
05_graph_search/: CMakeLists.txt
05_graph_search/src/: 05_graph_search.cpp
include/: helpers.h
src/: main.cpp
